--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic Information 
-title: Your Name
-position: Ph.D. Student
-affiliation: Your Affiliation
-email: yourname (at) example.edu
+title: Vincent Octavian Tiono
+position: EE Undergraduate Year 4
+affiliation: National Taiwan University
+email: b11901123[at]ntu.edu.tw & octavian.tiono4[at]gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
